# libdogbarf

./: CMakeLists.txt  README.md  compile_commands.json
cmake/: DogbarfcalConfig.cmake.in  dogbarfcal.pc.in
example/: CMakeLists.txt  compile_commands.json  print_weekly.c
include/: simple_dog_barf.h
src/: simple_dog_barf.c
